--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="8dp"
         android:layout_marginTop="8dp"
+        android:background="#FAFFFF"
         android:fillViewport="true"
         app:layout_constraintBottom_toTopOf="@+id/switchPrivate"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,8 +30,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="Your private photos"
-                android:textColor="@color/white"
+                android:text="Internal storage"
+                android:textColor="#303030"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -50,8 +51,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="Shared photos"
-                android:textColor="@color/white"
+                android:text="Shared Storage"
+                android:textColor="#303030"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
