--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
 
     <Button
         android:id="@+id/camera"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Camera"
         android:translationY="-140dp"
@@ -42,7 +42,7 @@
 
     <Button
         android:id="@+id/storage"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Storage"
         android:translationY="-140dp"
@@ -54,7 +54,7 @@
 
     <Button
         android:id="@+id/recorder"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Recorder"
         android:translationY="-140dp"
@@ -77,14 +77,15 @@
 
     <Button
         android:id="@+id/sms"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Sms"
         android:translationY="-140dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/recorder"
-        app:layout_constraintTop_toBottomOf="@+id/storage" />
+        app:layout_constraintTop_toBottomOf="@+id/storage"
+        app:layout_constraintVertical_bias="0.44" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
